# verilator-bin

./: CMakeLists.txt  README.md  WINDOWS_BUILD_SUMMARY.md
.github/workflows/: ci.yml  release.yml
scripts/: build-local.sh  build.sh  check-flex.sh  create-pacman-package.sh  debug-mingw-env.sh  export.envrc  linux-post-install.sh
tests/: run_smoke_test.sh  smoke.sv
